# airflow-ecr-plugin

./: .gitignore  .travis.yml  README.md  pyproject.toml
airflow_ecr_plugin/: __init__.py  conftest.py  hooks.py  operators.py
airflow_ecr_plugin/tests/: test_hooks.py  test_operators.py
